--- a/todo
+++ b/todo
@@ -1,9 +1,5 @@
-+ get openGL version 4.6
-
-- get simple compute shader to run
-	? generate buffers
-
-- generate particles
-	- render particles
-	? create hash function for psuedo random numbers
-
+- Change gravity calculation
+- Add more gravity points
+- Move gravity point with mouse
+- Place gravity point with mouse
+- camera
