normalised code format + added comments

--- a/todo
+++ b/todo
@@ -1,4 +1,4 @@
-- Add comments to code
-- normalize code format
++ Add comments to code
++ normalize code format
 ? Improve keybinds
 ? print keybinds
